2015-03-16  Perry McFarlane  <perry_m@mail.com>
* pia.[ch], pokey.c, statesav.c: Fix PIA CA2/CB2 and irq. Bump
  SAVE_VERSION_NUMBER to 8.


2015-03-14  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* sio.c: With SIO patch enabled, replicate behaviour of the real SIO OS
  routine. E.T. Phone Home! now works with SIO patch enabled.


2015-03-11  Perry McFarlane  <perry_m@mail.com>
* cpu.c: Fix opcodes 93, 9b, 9c, 9e, 9f (sha ind_y, shs, shy, shx, sha) page
  crossing behaviour.


2015-03-05  Christian Groessler  <chris@groessler.org>
* ui.c (AboutEmulator): Change copyright year to 2015.
* dc/version.h: Add a knob to switch "beta versions" on and off.
* dc/atari_dc.c: Update on-screen keyboard to current interface of
  ui_basic.c.


2015-02-25  Christian Groessler  <chris@groessler.org>
* configure.ac: If a non-standard location for the X11 libraries was given
  (--x-libraries parameter), add this location to the run-time search path.


2015-02-24  Perry McFarlane  <perry_m@mail.com>
* bit3.c, DOC/NEWS: Invert bit3 cursor, add bit3 NEWS.


2015-02-24  Christian Groessler  <chris@groessler.org>
* atari_x11.c, configure.ac: Add support for palette update in X11 targets.
* gtia.c: Fix compilation of basic (no video) target.


2015-02-18  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* DOC/NEWS, DOC/USAGE: Updated for new release.


2015-02-12  Petr Stehlik <pstehlik@sophics.cz>
Committing fixes provided by Jools Wills in SF.net Bugs #41 and #42:
* configure.ac: native building on RPi fixed
* sdl/video.c: handle properly situation when any resolution is available


2015-02-12  Perry McFarlane  <perry_m@mail.com>
* DOC/ChangeLog, DOC/TODO, DOC/USAGE, atari.c, cartridge.c, cfg.c,
  configure.ac, pbi.c, ui.c, videomode.[ch], sdl/input.c, sdl/palette.c,
  sdl/video.[ch], sdl/video_gl.c, sdl/video_sw.c, bit3.[ch]: Emulate the Bit3
  Full View 80 column card for the Atari 800.  Added more #ifdefs for AF80,
  XEP80_EMULATION, PBI_PROTO80, and NTSC_FILTER.

