@@ -60,7 +60,7 @@ int SDL_VIDEO_GL_pixel_format = SDL_VIDEO_GL_PIXEL_FORMAT_BGR16;
 static char const *library_path = NULL;
 
 /* Pointers to OpenGL functions, loaded dynamically during initialisation. */
-struct
+static struct
 {
 	void(APIENTRY*Viewport)(GLint,GLint,GLsizei,GLsizei);
 	void(APIENTRY*ClearColor)(GLfloat, GLfloat, GLfloat, GLfloat);
@@ -206,7 +206,11 @@ pixel_format_t const pixel_formats[4] = {
    -Wall -pedantic, but is the only possible solution. */
 static void (*GetGlFunc(const char* s))(void)
 {
-	void(*f)(void) = SDL_GL_GetProcAddress(s);
+/* suppress warning: ISO C forbids conversion of object pointer to function pointer type [-pedantic] */
+#ifdef __GNUC__
+	__extension__
+#endif
+	void(*f)(void) = (void(*)(void))SDL_GL_GetProcAddress(s);
 	if (f == NULL)
 		Log_print("Unable to get function pointer for %s\n",s);
 	return f;
@@ -527,7 +531,7 @@ static int InitGlPbo(void)
 
 static void ModeInfo(void)
 {
-	char *fullstring = (SDL_VIDEO_screen->flags & SDL_FULLSCREEN) == SDL_FULLSCREEN ? "fullscreen" : "windowed";
+	const char *fullstring = (SDL_VIDEO_screen->flags & SDL_FULLSCREEN) == SDL_FULLSCREEN ? "fullscreen" : "windowed";
 	Log_print("Video Mode: %dx%dx%d %s, pixel format: %s", SDL_VIDEO_screen->w, SDL_VIDEO_screen->h,
 		   SDL_VIDEO_screen->format->BitsPerPixel, fullstring, pixel_format_cfg_strings[SDL_VIDEO_GL_pixel_format]);
 }
@@ -561,18 +565,18 @@ static int SetVideoMode(int w, int h, int windowed)
 
 int SDL_VIDEO_GL_SetVideoMode(VIDEOMODE_resolution_t const *res, int windowed, VIDEOMODE_MODE_t mode, int rotate90)
 {
-	int new = SDL_VIDEO_screen == NULL; /* TRUE means the SDL/GL screen was not yet initialised */
+	int isnew = SDL_VIDEO_screen == NULL; /* TRUE means the SDL/GL screen was not yet initialised */
 	int context_updated = FALSE; /* TRUE means the OpenGL context has been recreated */
 	currently_rotated = rotate90;
 
 	/* Call SetVideoMode only when there was change in width, height, or windowed/fullscreen. */
-	if (new || SDL_VIDEO_screen->w != res->width || SDL_VIDEO_screen->h != res->height ||
+	if (isnew || SDL_VIDEO_screen->w != res->width || SDL_VIDEO_screen->h != res->height ||
 	    ((SDL_VIDEO_screen->flags & SDL_FULLSCREEN) == SDL_FULLSCREEN) == windowed) {
-		if (!new) {
+		if (!isnew) {
 			CleanGlContext();
 		}
 #if HAVE_WINDOWS_H
-		if (new && !windowed) {
+		if (isnew && !windowed) {
 			/* Switching from fullscreen software mode directly to fullscreen OpenGL mode causes
 			   glitches on Windows (eg. when switched to windowed mode, the window would spontaneously
 			   go back to fullscreen each time it loses and regains focus). We avoid the issue by
@@ -582,12 +586,12 @@ int SDL_VIDEO_GL_SetVideoMode(VIDEOMODE_resolution_t const *res, int windowed, V
 #endif /* HAVE_WINDOWS_H */
 		if (SetVideoMode(res->width, res->height, windowed))
 			/* Reinitialisation happened! Need to recreate GL context. */
-			new = TRUE;
+			isnew = TRUE;
 		if (!InitGlFunctions()) {
 			Log_print("Cannot use OpenGL - some functions are not provided.");
 			return FALSE;
 		}
-		if (new) {
+		if (isnew) {
 			GLint tex_size;
 			gl.GetIntegerv(GL_MAX_TEXTURE_SIZE, & tex_size);
 			if (tex_size < 1024) {
@@ -598,7 +602,7 @@ int SDL_VIDEO_GL_SetVideoMode(VIDEOMODE_resolution_t const *res, int windowed, V
 		pbo_available = InitGlPbo();
 		if (!pbo_available)
 			SDL_VIDEO_GL_pbo = FALSE;
-		if (new) {
+		if (isnew) {
 			Log_print("OpenGL initialized successfully. Version: %s", gl.GetString(GL_VERSION));
 			if (pbo_available)
 				Log_print("OpenGL Pixel Buffer Objects available.");
@@ -609,7 +613,7 @@ int SDL_VIDEO_GL_SetVideoMode(VIDEOMODE_resolution_t const *res, int windowed, V
 		context_updated = TRUE;
 	}
 
-	if (new) {
+	if (isnew) {
 		FreeTexture();
 		AllocTexture();
 	}
@@ -663,14 +667,14 @@ static void DisplayPalBlending(GLvoid *dest)
 {
 	Uint8 *screen = (Uint8 *)Screen_atari + Screen_WIDTH * VIDEOMODE_src_offset_top + VIDEOMODE_src_offset_left;
 	if (bpp_32)
-		PAL_BLENDING_Blit32((Uint32*)dest, screen, VIDEOMODE_actual_width, VIDEOMODE_src_width, VIDEOMODE_src_height, VIDEOMODE_src_offset_top % 2);
+		PAL_BLENDING_Blit32((ULONG*)dest, screen, VIDEOMODE_actual_width, VIDEOMODE_src_width, VIDEOMODE_src_height, VIDEOMODE_src_offset_top % 2);
 	else {
 		int pitch;
 		if (VIDEOMODE_actual_width & 0x01)
 			pitch = VIDEOMODE_actual_width / 2 + 1;
 		else
 			pitch = VIDEOMODE_actual_width / 2;
-		PAL_BLENDING_Blit16((Uint32*)dest, screen, pitch, VIDEOMODE_src_width, VIDEOMODE_src_height, VIDEOMODE_src_offset_top % 2);
+		PAL_BLENDING_Blit16((ULONG*)dest, screen, pitch, VIDEOMODE_src_width, VIDEOMODE_src_height, VIDEOMODE_src_offset_top % 2);
 	}
 }
 #endif /* PAL_BLENDING */
